styling completed and mapped all filters using js in Ui

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
                     </div>
                 </div>
             </div>
-            <div class="right"></div>
+            <div class="right">
+                <h2>filters</h2>
+                <div class="filters">
+                    <div class="filter">
+                        <p>brigtness</p>
+                        <input name = "brightness" type="range" min="0" max="200" value="100" class="slider" id="brightness">
+                    </div>
+
+                </div>
+            </div>
         </section>
     </main>
     <script src="script.js"></script>
