image upload canvas on screen to see the uploaded image

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <i class="ri-image-line"></i>
                         <p>no image chosen</p>
                     </div>
+                    <canvas id="image-canvas"></canvas>
                 </div>
             </div>
             <div class="right">
